# ytb_audio_v2

./: CMakeLists.txt  DataBase.cpp  DataBase.h  Handler.cpp  Handler.h  Home.qml  Login.qml  LoginCore.h  Menu.cpp  Menu.h  Menu.qml  TextData.cpp  TextData.h  Worker.cpp  Worker.h  appicon.rc  main.cpp  main.qml  mainscreen.cpp  mainscreen.h  qml.qrc  wav.cpp  wav.h
